SPA/examples/negative/test5NA.c
int main(void){
  int i = 0, j = 0;
  int *k = &i;
  j = i++ && ++(*k);
  return j;
}
